<resources>
    <!-- Please refer to https://www.microsoft.com/cognitive-services/en-us/ to get your subscription key -->
    <!-- If you have one subscription key, you can add it here to use the service -->
    <string name="subscription_key">acf548ba91ac4b0ab0985579ca375452</string>

    <string name="app_name">CrazyExFace</string>
    <string name="network_required">Network connection failed, please check your network settings.</string>

    <!-- Common in all activities -->
    <string name="progress_dialog_title">Please wait</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">From Camera</string>
    <string name="select_image_in_album">From Gallery</string>

    <!-- Detection activity -->
    <string name="image">Image:</string>
    <string name="select_image">Select\nImage</string>
    <string name="result">Please choose a face:</string>
    <string name="detect">Detect</string>

    <!-- Main activity -->
    <string name="detection">Detection</string>
    <string name="pickFrame">Pick Frame</string>
    <string name="welcome">welcome</string>
    <string name="home">Home screen</string>

    <string name="no_face_to_group">No faces to group</string>
    <string name="grouping">Grouping...</string>
    <string name="select_context">Select context</string>
    <string name="collage_faces">Collage faces</string>
    <string name="save_image">Save image</string>
    <string name="action_settings">Settings</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="collage">Collage</string>
    <string name="action_random">Random</string>
    <string name="action_save">Save</string>
    <string name="menu_layout">Layout</string>
    <string name="menu_text">Text</string>
    <string name="menu_sticker">Sticker</string>
    <string name="menu_bg">BG</string>
    <string name="menu_frame">Frame</string>
    <string name="menu_margin">Margin</string>
    <string name="menu_ratio">Ratio</string>
    <string name="margin">Margin</string>
    <string name="round">Round</string>
    <string name="gallery_footer_hint">Please select pictures!</string>
    <string name="next">Next</string>

    <string name="dialog_exit_editing">You have unsaved photo. Are you sure to exit?</string>
    <string name="keep_editing">Cancel</string>
    <string name="ok">OK</string>

    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer closed</string>
    <string name="all">All</string>
    <string name="text_size">Size:</string>
    <string name="padding_size">Padding:</string>
    <string name="warn_over_images">Please choose layout that match number of images</string>
    <string name="menu_gallery">Menu gallery</string>
    <string name="dialog_title">Delete</string>
    <string name="dialog_message">Are you sure you want to permanently delete this photo file?</string>
    <string name="delete_photo_success">Photo deleted</string>
    <string name="delete_photo_failed">Delete failed</string>
    <string name="saved_to_file">Photo saved to: </string>
    <string name="transition_settings">Transition settings</string>
    <string name="more">MORE</string>
    <string name="best_photo_collage">BEST PHOTO COLLAGE</string>
    <string name="share_app">SHARE APP</string>
    <string name="facebook_page">FACEBOOK PAGE</string>
    <string name="twitter">TWITTER</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="about">ABOUT</string>
    <string name="bsoft_email">bsoft2016@gmail.com</string>
    <string name="about_title_dialog">About Photo Collage</string>
    <string name="versionName">Version name</string>
    <string name="versionCode">Version code</string>
    <string name="save_resolution">Save resolution</string>
    <string name="saving">Saving..</string>
    <string name="creating_bitmap">Creating bitmap..</string>
    <string name="editor_replace">Replace</string>
    <string name="editor_rotate_90">Rotate 90</string>
    <string name="sticker_rotate_5">Rotate 5</string>
    <string name="sticker_mirror_5">Mirror 5</string>
    <string name="editor_delete">Delete</string>
    <string name="editor_edit">Edit</string>
    <string name="rotating">Rotating...</string>
    <string name="rate_app">Rate</string>
    <string name="more_apps">More</string>
    <string name="opacity">Opacity:</string>
    <string name="editor_mirror_90">Mirror 90</string>
    <string name="editor_correct_90">Correct 90</string>
    <string name="allow_stickers_added">The stickers add too much performance and app can\'t handle it</string>
    <string name="inform_small_image">Don\'t support for this image</string>
    <string name="out_of_memory_error">Out of memory, sorry!</string>
    <string name="donot_set_margin_for_pile">Don\'t set margin for pile type</string>
    <string name="please">Please wait...</string>
    <string name="sticker_opacity">Opacity</string>
    <string name="sticker_up">Up</string>
    <string name="sticker_down">Down</string>
    <string name="sticker_left">Left</string>
    <string name="sticker_right">Right</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="text_scale">Scale:</string>
    <string name="text_rotate">Rotation:</string>
    <string name="my_studio">Studio</string>
    <string name="action_studio">My Studio</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unselect_all">Unselect all</string>
    <string name="wait_loading">Loading, Please wait ...</string>
    <string name="noti_empty_studio">Your Studio is empty.</string>
</resources>
