<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_studio"
        android:icon="@drawable/ic_folder"
        android:orderInCategory="100"
        android:title="@string/action_studio"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_random"
        android:icon="@drawable/ic_shuffle"
        android:orderInCategory="100"
        android:title="@string/action_random"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
</menu>
