<!-- Copyright (c) Microsoft. All rights reserved. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetectionActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        card_view:cardBackgroundColor="@color/colorSecondary"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/button_small_size"
                android:layout_height="@dimen/button_small_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:onClick="actionBack"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:scaleType="fitCenter"
                android:text="Detect face"
                android:textColor="@color/button_enabled_background"
                android:textSize="@dimen/text_normal_size" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/view_margin"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/image_control"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/image"
                    android:textColor="@color/button_enabled_background" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    card_view:cardElevation="4dp">

                    <Button
                        android:id="@+id/select_image"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="selectImage"
                        android:text="@string/select_image" />
                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <ImageView
                android:id="@id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/image_control"
                android:layout_toRightOf="@id/image_control"
                android:background="#E0E0E0"
                android:contentDescription="@string/detection" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/button_enabled_background"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_detected_faces"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#E0E0E0"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="@color/button_enabled_background"/>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            card_view:cardElevation="1dp">

            <Button
                android:id="@+id/detect"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="detect"
                android:text="@string/detect" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            card_view:cardElevation="1dp">

            <Button
                android:id="@+id/pick_frame"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="pickFrame"
                android:text="@string/pickFrame"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
